--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node serveur/serveur.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha serveur/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test' "
   },
   "engines": {
     "node": "9.8.0"
@@ -15,5 +16,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2"
   }
 }
