--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "socket.io": "^1.4.8"
+    "request": "^2.88.0",
+    "socket.io": "^1.4.8",
+    "yargs": "^13.2.2"
   },
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.0.2",
-    "nodemon": "^1.10.2"
+    "nodemon": "^1.18.11"
   }
 }
