--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dark-sky": "^1.1.5",
     "date-and-time": "^0.6.3",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "request": "^2.88.0",
     "socket.io": "^1.4.8",
